@@ -168,7 +168,7 @@ tiberium-growth=Accelerate Blossom Tree Natural Growth
 tiberium-sludge-from-slurry=Our scientists have no idea why you would turn perfectly good Tiberium Slurry into worthless sludge, but they heard that it's what kids are into these days.
 # __1__ is replaced with a number
 tiberium-mixed-science=Combine multiple different types of Tiberium Data to get __1__% more Tiberium Science Packs!
-tiberium-growth=Does not directly yield Tiberium, causes the Blossom Tree to grow the surrounding Tiberium Ore field at an accelerated rate
+tiberium-growth=Use Growth Accelerators to feed Tiberium Substrate to Blossom Tree, causing them to grow the surrounding Tiberium Ore field at an accelerated rate
 
 [technology-name]
 tiberium-ore-centrifuging=Tiberium Ore Centrifuging
