@@ -276,6 +276,10 @@ data:extend{
 			},
 			{
 				type = "unlock-recipe",
+				recipe = "tiberium-growth"
+			},
+			{
+				type = "unlock-recipe",
 				recipe = "tiberium-reprocessor"
 			},
 			--  Tiberium Substrate recipes created and added to this tech by /scripts/DynamicOreRecipes
